[##3_httpclient] log4j.api added
Signed-off-by: FunThomas424242 (Thomas Schubert) <funthomas424242@gmail.com>