@@ -11,11 +11,11 @@
     <property environment="env"/>
     <property name="jdeps" value="${env.JAVA_HOME}/bin/jdeps"/>
 
-
-
-
     <target name="main"
-            depends="org.json, org.apache.commons.codec, org.slf4j, org.apache.httpcomponents.httpcore"
+            depends="org.json,
+                     org.apache.commons.codec,
+                     org.apache.httpcomponents.httpcore,
+                     log4j.api"
     />
 
     <target name="jdeps.clean">
@@ -28,11 +28,11 @@
         <property name="module.id" value="org.json"/>
         <property name="version" value="20190722"/>
 
-        <exec executable="${jdeps}">
-            <arg value="--generate-open-module"/>
-            <arg value="./jdeps"/>
-            <arg value="${user.home}/.m2/repository/${org.json.group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"/>
-        </exec>
+<!--        <exec executable="${jdeps}">-->
+<!--            <arg value="&#45;&#45;generate-open-module"/>-->
+<!--            <arg value="./jdeps"/>-->
+<!--            <arg value="${user.home}/.m2/repository/${org.json.group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"/>-->
+<!--        </exec>-->
 
         <exec executable="${jdeps}">
             <arg value="--generate-module-info"/>
@@ -52,9 +52,12 @@
         <javac includeantruntime="false" srcdir="./jdeps/${module.id}" destdir="./jdeps/${module.id}/classes"/>
 
         <delete file="./jmods/${module.id}-${version}.jmod"/>
-
         <jmod classpath="./jdeps/${module.id}/classes"
               destfile="./jmods/${module.id}-${version}.jmod"
+        />
+        <delete file="./jmods/${module.id}-${version}.jar"/>
+        <jmod classpath="./jdeps/${module.id}/classes"
+              destfile="./jmods/${module.id}-${version}.jar"
         />
 
     </target>
@@ -89,8 +92,10 @@
         <javac includeantruntime="false" srcdir="./jdeps/${module.id}" destdir="./jdeps/${module.id}/classes"/>
 
         <delete file="./jmods/${module.id}-${version}.jmod"/>
-
         <jmod classpath="./jdeps/${module.id}/classes" destfile="./jmods/${module.id}-${version}.jmod"/>
+
+        <delete file="./jmods/${module.id}-${version}.jar"/>
+        <jmod classpath="./jdeps/${module.id}/classes" destfile="./jmods/${module.id}-${version}.jar"/>
 
     </target>
 
@@ -126,72 +131,119 @@
         <javac includeantruntime="false" srcdir="./jdeps/${module.id}" destdir="./jdeps/${module.id}/classes"/>
 
         <delete file="./jmods/${module.id}-${version}.jmod"/>
-
         <jmod classpath="./jdeps/${module.id}/classes" destfile="./jmods/${module.id}-${version}.jmod"/>
+
+        <delete file="./jmods/${module.id}-${version}.jar"/>
+        <jmod classpath="./jdeps/${module.id}/classes" destfile="./jmods/${module.id}-${version}.jar"/>
 
     </target>
 
-    <!-- BEGIN OF DANGER PARTs -->
-    <target name="org.slf4j" depends="jdeps.clean">
-        <ac:var name="slf4j.group.id" value="org/slf4j"/>
-        <ac:var name="artifact.id" value="slf4j-api"/>
-        <ac:var name="module.id" value="org.slf4j"/>
-        <ac:var name="version" value="1.7.29"/>
+    <target name="log4j.api" depends="jdeps.clean">
+        <ac:var name="group.id" value="org/apache/logging/log4j"/>
+        <ac:var name="artifact.id" value="log4j-api"/>
+        <ac:var name="module.id" value="log4j.api"/>
+        <ac:var name="version" value="2.0-alpha2"/>
         <ac:var name="m2.path" value="${user.home}/.m2/repository/"/>
 
-        <!-- Erzeugung mit jdeps aktuell nicht möglich, daher manuell module-info.java geschrieben -->
+        <exec executable="${jdeps}">
+            <!-- deps ermittelt über
+                jdeps   ~/.m2/repository/org/apache/logging/log4j/log4j-api/2.0-alpha2/log4j-api-2.0-alpha2.jar|less
 
-        <echo file="./jdeps/${module.id}/module-info.java">
-            module org.slf4j {
-            exports org.slf4j.impl;
-            exports org.slf4j.event;
-            exports org.slf4j.helpers;
-            exports org.slf4j.spi;
-            }
-        </echo>
+               <arg value="- -module-path"/>
+               <arg value="./jmods"/>
+               <arg value="- -add-modules"/>
+               <arg value="java.base"/>
+             -->
+            <arg value="--generate-module-info"/>
+            <arg value="./jdeps"/>
+            <arg value="${user.home}/.m2/repository/${group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"/>
+        </exec>
 
 
-        <loadfile property="module-info.contents" srcFile="./jdeps/${module.id}/module-info.java"/>
+        <loadfile property="log4japi.contents" srcFile="./jdeps/${module.id}/module-info.java"/>
         <echo>##### Es folgt der Inhalt von module-info.java #####
-            ${module-info.contents}
+            ${log4japi.contents}
         </echo>
 
-        <unzip src="${user.home}/.m2/repository/${slf4j.group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"
-               dest="./jdeps/${module.id}/classes">
-        </unzip>
-        <unzip src="${user.home}/.m2/repository/${slf4j.group.id}/slf4j-jdk14/1.5.6/slf4j-jdk14-1.5.6.jar"
+        <unzip src="${user.home}/.m2/repository/${group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"
                dest="./jdeps/${module.id}/classes">
         </unzip>
 
         <javac includeantruntime="false" srcdir="./jdeps/${module.id}" destdir="./jdeps/${module.id}/classes"/>
 
         <delete file="./jmods/${module.id}-${version}.jmod"/>
+        <jmod classpath="./jdeps/${module.id}/classes"
+              destfile="./jmods/${module.id}-${version}.jmod"/>
 
-        <jmod classpath="./jdeps/${module.id}/classes" destfile="./jmods/${module.id}-${version}.jmod"/>
+        <delete file="./jmods/${module.id}-${version}.jar"/>
+        <jmod classpath="./jdeps/${module.id}/classes"
+              destfile="./jmods/${module.id}-${version}.jar"/>
+
+    </target>
+
+    <target name="org.slf4j-api" depends="jdeps.clean,org.apache.httpcomponents.httpcore">
+<!--    ,org.slf4j.impl">-->
+        <ac:var name="group.id" value="org/slf4j"/>
+        <ac:var name="artifact.id" value="slf4j-api"/>
+        <ac:var name="module.id" value="slf4j-api"/>
+        <ac:var name="version" value="1.7.29"/>
+        <ac:var name="m2.path" value="${user.home}/.m2/repository/"/>
+
+        <exec executable="${jdeps}">
+            <arg value="--module-path"/>
+            <arg value="./jmods"/>
+            <arg value="--add-modules"/>
+            <!-- ermittelt über
+                 jdeps - -module-path ./jmods - -add-modules org.apache.httpcomponents.httpcore ~/.m2/repository/org/slf4j/slf4j-api/1.7.29/slf4j-api-1.7.29.jar|less
+            -->
+            <arg value="org.apache.httpcomponents.httpcore,org.slf4j.impl"/>
+            <arg value="--generate-module-info"/>
+            <arg value="./jdeps"/>
+            <arg value="${user.home}/.m2/repository/${group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"/>
+        </exec>
+
+
+        <loadfile property="slf4japi.contents" srcFile="./jdeps/${module.id}/module-info.java"/>
+        <echo>##### Es folgt der Inhalt von module-info.java #####
+            ${slf4japi.contents}
+        </echo>
+
+        <unzip src="${user.home}/.m2/repository/${group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"
+               dest="./jdeps/${module.id}/classes">
+        </unzip>
+
+        <javac includeantruntime="false" srcdir="./jdeps/${module.id}" destdir="./jdeps/${module.id}/classes"/>
+
+        <delete file="./jmods/${module.id}-${version}.jmod"/>
+        <jmod classpath="./jdeps/${module.id}/classes"
+              destfile="./jmods/${module.id}-${version}.jmod"/>
+
+        <delete file="./jmods/${module.id}-${version}.jar"/>
+        <jmod classpath="./jdeps/${module.id}/classes"
+              destfile="./jmods/${module.id}-${version}.jar"/>
 
     </target>
 
 
 
-    <target name="org.apache.httpcomponents.httpclient" depends="jdeps.clean">
+    <target name="org.apache.httpcomponents.httpclient" depends="jdeps.clean, org.apache.httpcomponents.httpcore">
+
+<!--    ,org.apache.commons.logging">-->
         <ac:var name="group.id" value="org/apache/httpcomponents"/>
         <ac:var name="artifact.id" value="httpclient"/>
         <ac:var name="module.id" value="org.apache.httpcomponents.httpclient"/>
         <ac:var name="version" value="4.5.10"/>
         <ac:var name="m2.path" value="${user.home}/.m2/repository/"/>
 
-        <!-- Erzeugung mit jdeps aktuell nicht möglich, daher manuell module-info.java geschrieben -->
-
-        <echo file="./jdeps/${module.id}/module-info.java">
-            module ${module.id} {
-                exports org.apache.http.auth;
-                exports org.apache.http.client;
-                exports org.apache.http.conn;
-                exports org.apache.http.cookie;
-                exports org.apache.http.impl;
-                requires org.apache.httpcomponents.httpcore
-            }
-        </echo>
+        <exec executable="${jdeps}">
+            <arg value="--module-path"/>
+            <arg value="./jmods"/>
+            <arg value="--add-modules"/>
+            <arg value="org.apache.httpcomponents.httpcore,org.apache.commons.logging"/>
+            <arg value="--generate-module-info"/>
+            <arg value="./jdeps"/>
+            <arg value="${user.home}/.m2/repository/${group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"/>
+        </exec>
 
 
         <loadfile property="httpclient.context" srcFile="./jdeps/${module.id}/module-info.java"/>
@@ -202,58 +254,29 @@
         <unzip src="${user.home}/.m2/repository/${group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"
                dest="./jdeps/${module.id}/classes">
         </unzip>
-        <unzip src="${user.home}/.m2/repository/org/apache/httpcomponents/httpcore/4.4.12/httpcore-4.4.12.jar"
-               dest="./jdeps/${module.id}/classes">
-        </unzip>
 
         <javac includeantruntime="false" srcdir="./jdeps/${module.id}" destdir="./jdeps/${module.id}/classes"/>
 
         <delete file="./jmods/${module.id}-${version}.jmod"/>
+        <jmod
+                classpath="./jdeps/${module.id}/classes"
+                destfile="./jmods/${module.id}-${version}.jmod">
+            <!--            <modulepath>-->
+            <!--                <pathelement location="./jmods/org.apache.httpcomponents.httpcore-4.4.12.jmod"/>-->
+            <!--            </modulepath>-->
+        </jmod>
 
-        <jmod classpath="./jdeps/${module.id}/classes" destfile="./jmods/${module.id}-${version}.jmod"/>
+        <delete file="./jmods/${module.id}-${version}.jar"/>
+        <jmod
+                classpath="./jdeps/${module.id}/classes"
+                destfile="./jmods/${module.id}-${version}.jmod">
+            <!--            <modulepath>-->
+            <!--                <pathelement location="./jmods/org.apache.httpcomponents.httpcore-4.4.12.jmod"/>-->
+            <!--            </modulepath>-->
+        </jmod>
 
     </target>
 
 
-<!--    <target name="commons-logging" depends="jdeps.clean">-->
-<!--        <ac:var name="logging.group.id" value="commons-logging"/>-->
-<!--        <ac:var name="artifact.id" value="commons-logging"/>-->
-<!--        <ac:var name="module.id" value="commons.logging"/>-->
-<!--        <ac:var name="version" value="1.2"/>-->
-<!--        <ac:var name="m2.path" value="${user.home}/.m2/repository/"/>-->
-
-
-<!--        <exec executable="${jdeps}">-->
-<!--            <arg value="-cp"/>-->
-<!--            <arg value="${m2.path}/org/apache/logging/log4j/log4j-core/2.12.1/log4j-core-2.12.1.jar"/>-->
-<!--            <arg value="&#45;&#45;generate-open-module"/>-->
-<!--            <arg value="./jdeps"/>-->
-<!--            <arg value="${m2.path}/${logging.group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"/>-->
-<!--        </exec>-->
-
-<!--        <exec executable="${jdeps}">-->
-<!--            <arg value="-cp"/>-->
-<!--            <arg value="${m2.path}/org/apache/logging/log4j/log4j-core/2.12.1/log4j-core-2.12.1.jar"/>-->
-<!--            <arg value="&#45;&#45;generate-module-info"/>-->
-<!--            <arg value="./jdeps"/>-->
-<!--            <arg value="${user.home}/.m2/repository/${logging.group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"/>-->
-<!--        </exec>-->
-
-<!--        <loadfile property="avalon.context" srcFile="./jdeps/${module.id}/module-info.java"/>-->
-<!--        <echo>##### Es folgt der Inhalt von module-info.java #####-->
-<!--            ${avalon.context}-->
-<!--        </echo>-->
-
-<!--        <unzip src="${user.home}/.m2/repository/${logging.group.id}/${artifact.id}/${version}/${artifact.id}-${version}.jar"-->
-<!--               dest="./jdeps/${module.id}/classes">-->
-<!--        </unzip>-->
-
-<!--        <javac includeantruntime="false" srcdir="./jdeps/${module.id}" destdir="./jdeps/${module.id}/classes"/>-->
-
-<!--        <delete file="./jmods/${module.id}-${version}.jmod"/>-->
-
-<!--        <jmod classpath="./jdeps/${module.id}/classes" destfile="./jmods/${module.id}-${version}.jmod"/>-->
-
-<!--    </target>-->
 
 </project>
